design+funktions upgrade

--- a/mapping.json
+++ b/mapping.json
@@ -1,6 +1,6 @@
 {
   "header": {
-    "kunde": "C1",
+    "zeichnungsnummer": "C1",
     "auftrag": "I1",
     "position": "M1",
     "datum": "P1",
